# CPP-Design-Patterns-V1

./: .clang-format  .gitignore  CMakeLists.txt  README.md
1-Creational/1-Design-Principles/1-SOLID/1-S-ingleResponsibilityPrinciple/: SRP.cpp
1-Creational/1-Design-Principles/1-SOLID/2-O-penClosedPrinciple/: OCP.cpp
1-Creational/1-Design-Principles/1-SOLID/3-L-iskovSubstitutionPrinciple/: LSP.cpp
1-Creational/1-Design-Principles/1-SOLID/4-I-nterfaceSegregationPrinciple/: ISP.cpp
1-Creational/1-Design-Principles/1-SOLID/5-D-ependencyInjection/: BoostDI.cpp  di.hpp
1-Creational/1-Design-Principles/2-Monads/: README.md
1-Creational/1-Design-Principles/3-Maybe/: README.md
1-Creational/2_Builder/1-Builder/: Builder.cpp
1-Creational/2_Builder/1-LifeWithoutBuilder/: LifeWithoutBuilder.cpp
1-Creational/2_Builder/2-FluentBuilder/: FluentBuilder.cpp
1-Creational/2_Builder/3-GroovyStyleBuilder/: GroovyStyle.cpp
1-Creational/2_Builder/4-BuilderFacets/: Facets.cpp  Person.h  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonJobBuilder.h
1-Creational/2_Builder/5-BuilderFacets/: Facets.cpp  Person.cpp  Person.h  PersonBuilder.h
1-Creational/3_Factories/1-PointExample/: PointExample.cpp
1-Creational/3_Factories/2-FactoryMethod/: FactoryMethod.cpp
1-Creational/3_Factories/3-Factory/: Factory.cpp
1-Creational/3_Factories/4-InnerFactory/: InnerFactory.cpp
1-Creational/3_Factories/5-AbstractFactory/: AbstractFactory.cpp  DrinkFactory.h  HotDrinkFactory.h  TeaFactory.h
1-Creational/3_Factories/6-FunctionalFactory/: CoffeeFactory.h  DrinkFactory.h  FunctionalFactory.cpp  HotDrink.h
1-Creational/4-Prototype/1-PrototypeFactory/: Prototype.cpp
1-Creational/4-Prototype/2-BoostSerialization/: Serialization.cpp
1-Creational/5-Singleton/1-SingletonDatabase/: SingletonDatabase.cpp
2-Structural/1-Adapter/1-Stack/: StructuralStack.cpp
2-Structural/1-Adapter/2-String/: StructuralString.cpp
2-Structural/2-Bridge/1-PimplIdiom/: Person.cpp  Person.h  main.cpp
2-Structural/2-Bridge/2-ShapeSizing/: ShapeSizing.cpp
2-Structural/3-Composite/1-ObjectCompositionAndIteration/: composite.cpp
2-Structural/3-Composite/2-GeometricShapes/: graphics.cpp
2-Structural/3-Composite/3-NeuralNetworks/: neurons.cpp
2-Structural/4-Decorator/1-FunctionDecorator/: functionDecorator.cpp
2-Structural/4-Decorator/2-WrappingDecorator/: wrappingDecorator.cpp
2-Structural/4-Decorator/3-MixinInheritance/: mixinDecorator.cpp
2-Structural/4-Decorator/4-UsabilityImprovements/: improvedDecorator.cpp
2-Structural/5-Façade/1-Bloom/: Area.h  Bloom.cpp  Console.h  IBuffer.h  MenuBar.cpp  MenuBar.h  Point4.h  ShaderUtils.cpp  ShaderUtils.h  TextBuffer.cpp  TextBuffer.h  TextRenderer.cpp  TextRenderer.h  TextureManager.cpp  TextureManager.h  Util.h  Viewport.h  Window.cpp  Window.h
2-Structural/6-Flyweight/: flyweight.cpp
2-Structural/7-NullObject/: nullobject.cpp
2-Structural/8-Proxy/1-SmartPointerProxy/: smartPointerProxy.cpp
2-Structural/8-Proxy/2-VirtualProxy/: virtualProxy.cpp
2-Structural/8-Proxy/3-CommunicationProxy/: communicationProxy.cpp
3-Behavioral/01-ChainOfResponsibility/1-PointerChain/: cor_pointer.cpp
3-Behavioral/01-ChainOfResponsibility/2-BrokerChain/: cor_broker.cpp
3-Behavioral/02-Command/: command.cpp
3-Behavioral/03-Interpreter/: interpreter.cpp
3-Behavioral/04-Iterator/1-IteratorSTL/: iteratorSTL.cpp
3-Behavioral/04-Iterator/2-BinaryTreeIterator/: binaryTreeIterator.cpp
3-Behavioral/04-Iterator/3-BoostIteratorFacade/: facade.cpp
3-Behavioral/05-Mediator/1-ChatRoom/: ChatRoom.cpp  ChatRoom.h  Person.cpp  Person.h  chat.cpp
3-Behavioral/05-Mediator/2-EventBroker/: mediator.cpp
3-Behavioral/06-Memento/: memento.cpp
3-Behavioral/07-Observer/1-BoostSignal2Observer/: observer.cpp
3-Behavioral/07-Observer/2-ThreadSafetyObserver/: observer2.cpp
3-Behavioral/08-State/1-HandwrittenStateMachine/: basic.cpp
3-Behavioral/08-State/2-BoostStateMachine/: msm.cpp
3-Behavioral/09-Strategy/1-StaticStrategy/: strategy_static.cpp
3-Behavioral/09-Strategy/2-DynamicStrategy/: strategy_dynamic.cpp
3-Behavioral/10-Template/: template_method.cpp
3-Behavioral/11-Visitor/: visitor.cpp  visitor.hpp
3-Behavioral/11-Visitor/1-StaticVisitor/: model.hpp  staticVisitor.cpp
3-Behavioral/11-Visitor/2-DoubleDispatchVisitor/: dynamicVisitor.cpp  model.hpp  visitor.hpp
3-Behavioral/11-Visitor/3-MultiDispatchVisitor/: multiDispatchVisitor.cpp
CMakeModules/: FindCppREST.cmake
docs/: Makefile  behavioral.rst  conf.py  creational.rst  index.rst  principles.rst  structural.rst
src/1_Design_Principles/1_SOLID/1_S_ingle_Responsibility_Principle/: CMakeLists.txt  SRP.cpp  SRPdf.cpp
src/1_Design_Principles/1_SOLID/2_O_pen_Closed_Principle/: CMakeLists.txt  OCP.cpp
src/1_Design_Principles/1_SOLID/3_L_iskov_Substitution_Principle/: LSP.cpp
src/1_Design_Principles/1_SOLID/4_I_nterface_Segregation_Principle/: ISP.cpp
